@@ -23,6 +23,12 @@ libbalsa/gmime-gpgme-signature.c
 libbalsa/gmime-multipart-crypt.c
 libbalsa/html.c
 libbalsa/identity.c
+libbalsa/imap/auth-cram.c
+libbalsa/imap/auth-gssapi.c
+libbalsa/imap/imap-auth.c
+libbalsa/imap/imap-commands.c
+libbalsa/imap/imap-handle.c
+libbalsa/imap/imap-tls.c
 libbalsa/imap-server.c
 libbalsa/libbalsa.c
 libbalsa/libbalsa-conf.c
